# versioning-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: coverage.yml  test.yml
src/: lib.rs  maven.rs  parser.rs  range.rs  traits.rs
src/maven/: version.rs  version_tests.rs
src/maven/snapshots/: verver__maven__version__version_tests__tokenization-2.snap  verver__maven__version__version_tests__tokenization-3.snap  verver__maven__version__version_tests__tokenization-4.snap  verver__maven__version__version_tests__tokenization-5.snap  verver__maven__version__version_tests__tokenization-6.snap  verver__maven__version__version_tests__tokenization.snap
src/snapshots/: verver__maven__maven_test__tokenization-2.snap  verver__maven__maven_test__tokenization-3.snap  verver__maven__maven_test__tokenization-4.snap  verver__maven__maven_test__tokenization-5.snap  verver__maven__maven_test__tokenization-6.snap  verver__maven__maven_test__tokenization.snap
