[package]
name = "verver"
description = "Utilities for parsing, comparing, and manipulating version numbers and ranges"
repository = "https://github.com/zharinov/verver"
version = "0.0.1"
edition = "2021"
rust-version = "1.65.0"
license = "MIT"

[dependencies]
winnow = "0.6.7"

[dev-dependencies]
rstest = "0.21.0"
insta = { version = "1.38.0", features = ["yaml"] }
serde = "1.0.199"
itertools = "0.13.0"

[profile.dev.package.insta]
opt-level = 3
